--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
-1. Add particle effect to Rocket missile
+1. Add particle effect to Rocket missile  (DONE)
 2. Add auto guidance support to missiles
+3. Add Text notification on Dropdown catch
