Added player text on dropdown catch

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
 1. Add particle effect to Rocket missile  (DONE)
 2. Add auto guidance support to missiles
 3. Add Text notification on Dropdown catch
+4. Fix HUD fonts (scale)
+5. Enemy ships engine particles support
